Bug correction: Issue with nav bar on smaller devices not showing correct. Adding top margin|

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,7 @@ body {
 
 .navbar {
     background-color: #fafafa;
+    margin-top: 10px;
 }
 
 .navbar-brand {
